welcome.lessons.welcome.loopdowhile.Poucet1.scala.code

while(!sortieTrouvee()){
  for (nbpas <- 0 to 5){
    avance()
  	

